I am still struggle with the search

--- a/mywheels.html
+++ b/mywheels.html
@@ -1,7 +1,7 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
 	<title>My Wheels</title>
 	<link rel="stylesheet" href="css/mywheels.css" type="text/css" media="screen">
 	
@@ -15,11 +15,11 @@
 	</div>
 -->	
 
-
+<!--
 <div class="gen">
-	<img class="bottom" src="images/Hyundai_Genesis1_vn.jpg" alt="Hyundai_Genesis1_vn.jpg" width="710" height="470"> 
+	<img class="bottom" src="images/Hyundai_Genesis1_vn.jpg" alt="Hyundai_Genesis1_vn.jpg" width="710" height="470"/> 
 </div>  
-
+-->
 <div id='tabs'> 
 <ul> 
 <li><a href='#'>Home</a></li> 
@@ -30,13 +30,22 @@
 </ul> 
 </div> 
 <div id="searcharea">
-	<br>&nbsp;
+	
 	<p><label for="search">car search</label></p>
 	<p>Enter the make or model of a car</p>
 
 <input type="search" name="search" id="search" placeholder="make or model"/>
 </div>
-<div id="update"></div>
+
+<div id="update">
+	<ul>
+		<li><h6>BMW</h6><img class="bottom" src="images/BMW_X6_vn.jpg"/> </li>
+		<li><h6>Ford</h6><img class="bottom" src="images/Ford_Edge_vn.jpg"/></li>
+		<li><h6>Hyundai</h6><img class="bottom" src="images/Hyundai_Genesis1_vn.jpg"/></li>
+		<li><h6>Infiniti</h6><img class="bottom" src="images/InfinitiQ30_Concept2_vn.jpg"/></li>
+		<li><h6>Jeep</h6><img class="bottom" src="images/jeep_GrandCherokee_vn.jpg"/></li>
+	</ul>
+</div>
 <script src="jquery.js"></script>
 <script src="jquery.js"></script>
 <div id="content">The Simple and Faster Way to Buy a Car!</div>
